fix: yt-player properly showing on mobile device

--- a/style.css
+++ b/style.css
@@ -258,8 +258,8 @@ button:hover {
 
 #floating-video {
   position: fixed;
-  width: 560px;
-  height: 315px;
+  width: 280;
+  height: 158;
   top: 0;
   left: 0;
   z-index: 1000; /* Ensures it stays on top of other elements */
